# falcon_table_led

./: .gitignore  .gitmodules  README.md  find-pi.sh  push-to-pi.sh  requirements.txt  serial_monitor.sh
led_strip/: run.py
led_strip/pixel_strip_emulator/: pixel_strip.py  pixel_strip_thread.py
led_strip/templates/: index.html
pi_config/: wpa_supplicant.conf
pico/: CMakeLists.txt
pico/src/: hello_usb.cpp
pico/src/led_strip/: CMakeLists.txt  led_strip.cpp  led_strip.h
src/pi/: test.py
src/table_controller/: compile.sh  io.h  table_controller.ino  upload.sh
